# fig

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
app/: package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
app/messages/: en.json  fr.json
app/project.inlang/: project_id  settings.json
app/src/: app.css  app.html
app/src/lib/canvas/: Canvas.svelte  Geometries.svelte.ts  Geometry.svelte.ts  Rect.svelte.ts
app/src/lib/canvas/components/: EditRect.svelte.ts  Selector.svelte.ts  TransformCorner.svelte.ts
app/src/lib/canvas/context/: canvasContext.ts  vectorContext.ts
app/src/lib/canvas/primitive/: arc.ts  cross.ts  cubicCurve.ts  path.ts
app/src/lib/canvas/stores/: canvasClick.svelte.ts  canvasContent.svelte.ts  canvasPipeline.svelte.ts  canvasRenderingContext.svelte.ts  canvasSettings.svelte.ts  canvasTime.svelte.ts  canvasTransform.svelte.ts  cursorHover.svelte.ts  selectedGroup.svelte.ts  userMode.svelte.ts  (+1 more)
app/src/lib/components/: index.ts
app/src/lib/panels/: panel-right.svelte
app/src/lib/stores/: cursorPosition.svelte.ts  index.ts  keys.svelte.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
crates/fig-file/: Cargo.toml
crates/fig-tauri/: Cargo.toml  tauri.conf.json
crates/fig-tauri/src/: main.rs
crates/fig-types/: Cargo.toml
crates/fig-types/.cargo/: config.toml
crates/fig-types/src/: lib.rs
crates/fig-types/src/node/: mod.rs  vector.rs
crates/fig-types/src/properties/: mod.rs
(+26 files in other folders)
